[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/BystanderTemplate.gd" type="Script" id=1]
[ext_resource path="res://Models/BystanderMeshes/Male_LookingUp.mesh" type="ArrayMesh" id=2]
[ext_resource path="res://SFX/Ohno.wav" type="AudioStream" id=3]



[sub_resource type="CapsuleShape" id=1]
radius = 0.35
height = 1.5

[node name="BystanderTemplate" type="RigidBody"]
collision_layer = 8
collision_mask = 19
gravity_scale = 0.02
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 1.1, 0.006 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( -2.62268e-008, 0, 0.6, 0, 0.6, 0, -0.6, 0, -2.62268e-008, 0, 0, 0 )
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="OutOfBoundsTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_db = 16.162
doppler_tracking = 2
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
[connection signal="timeout" from="OutOfBoundsTimer" to="." method="_on_OutOfBoundsTimer_timeout"]
